# chellox

./: README.md  index.html  package.json  pnpm-lock.yaml
public/locales/en-US/: translation.json
public/locales/zh-CN/: translation.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: WindowTitlebar.tsx
src/layouts/: DefaultLayout.tsx
src/pages/HomePage/: index.tsx
src/pages/HomePage/components/: LogFileInput.tsx  LogTable.tsx  types.ts
